--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,32 +1,38 @@
-<h1>Burgers!</h1>
-<h2>Burgers that have not been eaten</h2>
+<h1 class="center text-center">Eat-Da-Burger!</h1>
 
-<ul>
-  {{#each burgers}}
-    {{#unless devoured}}
-      {{> burgers/burger-block devoured=true}}
-    {{/unless}}
-  {{/each}}
-</ul>
-<h2>Burgers that have been eaten</h2>
-<ul>
-  {{#each burgers}}
-    {{#if devoured}}
-      {{> burgers/burger-block devoured=false}}
-    {{/if}}
-  {{/each}}
-</ul>
+<div class="burger">
+  <div class="bun bottom"></div>
+  <div class="patty"></div>
+  <div class="cheesey">
+    <div class="cheese"></div>
+  </div>
+  <div class="bun top"></div>
+</div>
 
-<h2>Add a Burger</h2>
-<form class="create-form">
-  <div class="form-group">
-    <label for="bu">Burger Name:</label>
-    <input type="text" id="bu" name="burger_name">
-  </div>
-  <div class="form-group">
-    <label for="devoured">Devoured?</label><br>
-    <input type="radio" name="devoured" value="1" checked> Devoured<br>
-    <input type="radio" name="devoured" value="0"> Not eaten yet
-  </div>
-  <button type="submit">Add Burger</button>
-</form>
+
+<div id="content">
+  <h2 class="center text-center">Burgers that have not been eaten</h2>
+  <ol class="center">
+    {{#each burgers}} {{#unless devoured}} {{> burgers/burger-block devoured=true}} {{/unless}} {{/each}}
+  </ol>
+  <h2 class="center text-center">Burgers that have been eaten</h2>
+  <ol class="center">
+    {{#each burgers}} {{#if devoured}} {{> burgers/burger-block devoured=false}} {{/if}} {{/each}}
+  </ol>
+
+  <h2 class="center text-center">Add a Burger</h2>
+  <form class="create-form center">
+    <div class="form-group">
+      <label for="bu">Burger Name:</label>
+      <input type="text" id="bu" name="burger_name">
+    </div>
+    <div class="form-group">
+      <label for="devoured">Devoured?</label>
+      <br>
+      <input type="radio" name="devoured" value="1" > Devoured
+      <br>
+      <input type="radio" name="devoured" value="0" checked> Not eaten yet
+    </div>
+    <button type="submit">Add Burger</button>
+  </form>
+</div>
